Stop arrows on work page from rendering as emoji on iOS
Found this solution on
http://stackoverflow.com/questions/24748565/prevent-html-entity-conversi
on-to-emoji-on-ios-for-html-email

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -29,7 +29,7 @@
     	display: block;
       @media screen and (min-width: 500px) {
         &:hover {
-          border-bottom: 1px solid #ccc;
+          border-bottom: 1px solid #828282;
         }
       }
     }
@@ -125,11 +125,8 @@
 }
 .post-list h2 {
   font-size: 1.5em;
-	font-weight: 300;
+	font-weight: 400;
 	margin: 0;
-}
-.post-list.home h2 {
-  font-weight: 400;
 }
 .post-list a:hover {
 	text-decoration: underline;
